BUG: 208691

avoid recursion when handling copy/paste actions

svn path=/trunk/KDE/kdepim/; revision=1028579